# omurtag

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  config.example.py  install.sh  pyproject.toml  run-test.sh  run.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  template_submission.md
.github/workflows/: publish.yml
docs/: app.jsx  docs-content.jsx  install.sh  pages.jsx  primitives.jsx  serve.sh  tweaks-panel.jsx
omurtag/: __init__.py  __main__.py  commands.py  models.py  security.py  utils.py
tests/fake_cargo_tmpl/: Cargo.toml
tests/fake_go_tmpl/: go.mod
tests/fake_neovim_tmpl/: omurtag.toml
tests/fake_neovim_tmpl/doc/: <*project*>.txt
tests/fake_neovim_tmpl/lua/<*project*>/: init.lua
tests/fake_neovim_tmpl/plugin/: <*project*>.lua
tests/fake_npm_tmpl/: package.json
tests/fake_python_tmpl/: <*project*>.py  omurtag.toml  pyproject.toml
tests/fake_ruby_tmpl/: Gemfile
tests/fake_script_tmpl/: main.py  omurtag.sh
website/omurtag.github.io/: donate.jsx  index.html  install.sh  pages.jsx  styles.css  templates.json
