[project]
name = "omurtag"
version = "0.3.1"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gitpython>=3.1.46",
    "rich-argparse>=1.7.2",
    "tqdm>=4.67.3",
    "requests>=2.32.0",
    "questionary>=2.0.0",
]

[project.scripts]
omurtag = "omurtag.__main__:main"

[tool.black]
line-length = 80
